clusters/prod/apps/flask_404_app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-404-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: flask-404-app
  labels:
    app: flask-404
    environment: production
    team: devops
    version: v1.0.0
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-404-service
                port:
                  number: 80
